--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/Images/Favicon images/under-dev.png" type="images/x-icon">
+    <link rel="icon" href="/logo-files/xarch-high-resolution-logo-transparent.png" type="images/x-icon">
     <link rel="stylesheet" href="/style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
@@ -11,25 +12,54 @@
     <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'>
     <title>Experience the future today at Xarch</title>
 </head>
+
 <body>
-    <header>
-        <h1 class="logo">Xarch</h1>
-    </header>
     <div class="container">
-        <div class="status">Site Under Development</div>
-        <p class="engaging-text">
-            Unleashing the Future of Technology<br>
-            Something extraordinary is brewing at Xarch. A symphony of innovation and brilliance is in progress. The digital landscape is about to transform, and we invite you to be part of this journey. Stay tuned for a revolution that will redefine the way you experience technology.
-        </p>
-        <div class="social-links">
-            <a href="https://twitter.com/Xarchtech" target="_blank" class="social-icon"><img src="/Images/Social media/Logo_of_Twitter.svg.png" alt="Twitter"></a>
-            <a href="https://linkedin.com/company/xarch" target="_blank" class="social-icon"><img src="/Images/Social media/LinkedIn_logo_initials.png" alt="LinkedIn"></a>
-            <a href="https://www.instagram.com/xarchtechnologies/" target="_blank" class="social-icon"><img src="/Images/Social media/Instagram_icon.png.webp" alt="Instagram"></a>
-            <a href="https://www.youtube.com/@Xarch-Technologies" target="_blank" class="social-icon"><img src="/Images/Social media/pngtree-youtube-social-media-round-icon-png-image_6315993.png" alt="YouTube"></a>
-            <a href="mailto:company.xarch@gmail.com" class="social-icon"><img src="/Images/Social media/4672500.png" alt="Email"></a>
+        <!-- Left Section -->
+        <div class="left-section">
+            <div class="video-background">
+                <video autoplay muted loop id="bg-video">
+                    <source src="/Motion graphics/program_-_120 (Original).mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="content-l">
+                <!-- Logo and Brand -->
+                <div class="logo">
+                    <img src="/logo-files/xarch-logo-zip-file/png/logo-color.png" alt="Xarch Logo">
+                </div>
+                <div class="brand">
+                    <h1 class="brand-name">Xarch</h1>
+                </div>
+            </div>
+        </div>
+        <!-- Right Section -->
+        <div class="right-section">
+            <div class="content-r">
+                <h1 class="soon-banner">Website Coming Soon</h1>
+                <div id="countdown"></div>
+            </div>
+            <div class="text-content">
+                <!-- Website Description -->
+                <p>Unleashing the Future of Technology
+                    Something extraordinary is brewing at Xarch. A symphony of innovation and brilliance is in progress. The digital landscape is about to transform, and we invite you to be part of this journey. Stay tuned for a revolution that will redefine the way you experience technology.
+                </p>
+            </div>
+            <!-- Footer -->
+            <div class="footer">
+                <a href="https://www.instagram.com" target="_blank"><img src="/Social media/Instagram_icon.png.webp"
+                        alt="Instagram"></a>
+                <a href="https://www.twitter.com" target="_blank"><img
+                        src="/Social media/Logo_of_Twitter.svg.png" alt="Twitter"></a>
+                <a href="https://www.linkedin.com" target="_blank"><img
+                        src="/Social media/LinkedIn_logo_initials.png" alt="Linkedin"></a>
+                <a href="mailto:company.xarch@gmail.com" class="social-icon"><img
+                        src="/Social media/4672500.png" alt="Email"></a>
+            </div>
         </div>
     </div>
 
-<script src="script.js"></script>
+    <script src="countdown.js"></script>
 </body>
+
 </html>
